[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airo-drake"
version = "0.0.7"
authors = [
  { name = "Andreas Verleysen", email = "andreas.verleysen@ugent.be" },
  { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
  { name = "Mathieu De Coster", email = "mathieu.decoster@ugent.be" },
]
description = "Integration between airo-mono and Drake."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = ["airo-models>=0.0.10", "drake", "ur-analytic-ik>=0.0.4", "loguru"]

[project.urls]
Homepage = "https://github.com/airo-ugent/airo-drake"
Issues = "https://github.com/airo-ugent/airo-drake/issues"
