[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airo-drake"
version = "0.0.8"
authors = [
  { name = "Andreas Verleysen", email = "andreas.verleysen@ugent.be" },
  { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
  { name = "Mathieu De Coster", email = "mathieu.decoster@ugent.be" },
]
description = "Integration between airo-mono and Drake."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "airo-models>=0.0.12",
    "airo-typing>=2025.11.0",
    "drake>=1.47.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "ur-analytic-ik>=0.0.4",
]

[project.urls]
Homepage = "https://github.com/airo-ugent/airo-drake"
Issues = "https://github.com/airo-ugent/airo-drake/issues"

[tool.uv.sources]
airo-models = { git = "https://github.com/airo-ugent/airo-models.git", branch = "crx10ial" }
